fix: fixed the ugly header, removed dropdown invisible carats, changed icons to bootstrap icons

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -4,6 +4,14 @@
     overflow-x: hidden;
 }
 
+#header-icons > div{
+    margin-right: 1em;
+}
+
+/* #cart-dropdown::after {
+    display: none;
+} */
+
 #cart-dropdown-menu-content {
     max-height: 20vh;
     overflow-y: auto;
